log
Sun, May 18, 2025 10:46:54 AM: 
 sudoku.c | 90 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 88 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:47:18: error: unused variable 'l' [-Werror=unused-variable]
     int i, j, k, l;
                  ^
test.c: At top level:
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:155:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Sun, May 18, 2025 10:48:49 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:155:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
f57e493
Sun, May 18, 2025 10:50:03 AM: 
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:155:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
95365f0
Sun, May 18, 2025 11:01:23 AM: 
 sudoku.c | 26 +++++++++++++++-----------
 1 file changed, 15 insertions(+), 11 deletions(-)
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:159:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
5077981
Sun, May 18, 2025 11:18:22 AM: 
 sudoku.c | 29 +++++++++++++----------------
 1 file changed, 13 insertions(+), 16 deletions(-)
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:157:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
a37f9b5
Sun, May 18, 2025 11:20:26 AM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
1709895
Sun, May 18, 2025  1:32:41 PM: 
 sudoku.c | 15 ++++++++++-----
 1 file changed, 10 insertions(+), 5 deletions(-)
 tests:  10|0
total_score: 70/70
accc3ca
Sun, May 18, 2025  1:34:19 PM: 
 sudoku.c | 26 +++++++++++++-------------
 1 file changed, 13 insertions(+), 13 deletions(-)
 tests:  10|0
total_score: 70/70
fd4af92
